# salary_analysis_infrastructure

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.template.md  pyproject.toml
.github/workflows/: build.yaml  deploy.yaml  push.yaml  run.yaml  test.yaml
data/: prepared_people.csv
documents/changelogs/: 1.0.0.md
models/: model.pkl  scaler.pkl
scripts/: api_test.sh  config.json  generate_readme.py
src/api/: Dockerfile  build_image.sh  main.py  requirements.txt  run_container.sh
src/api/models/: model.pkl
src/docker/: docker-compose.yml
src/docker/build_model/: .dockerignore  Dockerfile  build_model.py
src/docker/prepare_dataframe/: Dockerfile  prepare_dataframe.py
src/kubernetes/: api_deploy.yml  api_svc.yml  create_config_map.sh  create_namespace.sh  models-pvc.yml  models_pv.yml  secret_container_registry.sh
src/monitoring/: docker-compose.yml
src/pipeline/: build_model.py  extract.py  prepare_dataframe.py  transform_json_to_csv.py
tests/: conftest.py  model_test.py
