[project]
name = "salary-analysis-infrastructure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "fastapi>=0.116.1",
    "joblib>=1.5.1",
    "pandas>=2.3.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "gittyleaks>=0.0.31",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]
